# nx-boss

./: pyproject.toml
src/nx_boss/: __main__.py
